# TpLearn

./: .cache  LICENSE.md  README.md  bot.py  com_cookies.txt  config.py  constant.py  data.txt  db.py  db_migrate.py  default_config.json  install.bash  main.py  pagination.py  pyproject.toml  redis.py  requirements.txt  run.bash  webserver.py
evals/: __info__.txt  work_debug.json
exts/: __info__.txt  add.py  admin.py  antyPing.py  assignment.py  dayloop.py  debug.py  dm.py  dupe_check.py  errorhand.py  help.py  kus.py  muleval.py  music.py  new_patch.py  ping.py  settings.py  setup.py  update.py  utils.py  wait.py  works.py
logs/: __info__.txt
src/: bot.py  config.py  db.py  default_config.json  main.py  pagination.py  webserver.py
src/exts/: admin.py  assignment.py  dayloop.py  debug.py  dm.py  dupe_check.py  errorhand.py  help.py  kus.py  muleval.py  music.py  new_patch.py  ping.py  remind.py  setup.py  terminate.py  update.py  utils.py
src/updater/: update.py
src/utils/: audio.py  checks.py  extensions.py  log.py  planner.py  post_eval.py  reminderManager.py  spotify.py  time.py  yt_service.json
updater/: update.py
utils/: __info__.txt  audio.py  checks.py  extensions.py  log.py  manager.py  planner.py  post_eval.py  reminderManager.py  spotify.py  time.py  utils.py
