[tool.poetry]
name = "tplearn-beta"
version = "0.1.0"
description = ""
authors = ["Tpmonkey"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.0.0"
pytz = "^2021.1"
coloredlogs = "^15.0"
discord = "^1.0.1"
flask = "^1.1.2"
bs4 = "^0.0.1"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"
google-api-python-client = "^2.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
