[tool.poetry]
name = "tplearn-beta"
version = "1"
description = ""
authors = ["Tpmonkey"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
replit = "^3.1.0"
pytz = "^2021.1"
coloredlogs = "^15.0"
discord = "^1.7.3"
bs4 = "^0.0.1"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.4.0"
google-api-python-client = "^2.21.0"
spotipy = "^2.19.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
